--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -57,6 +57,7 @@ body {
 	justify-content: space-between;
 	margin: 20px 20px 20px 0px;
 	border-radius: 15px;
+	overflow: hidden;
 }
 
 .host {
@@ -80,6 +81,8 @@ body {
 	padding: 5px;
 	color: white;
 	box-shadow: 0px 1px 2px gray;
+	    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .membership-info>h2 {
