--- a/src/main/resources/static/css/userInfo.css
+++ b/src/main/resources/static/css/userInfo.css
@@ -279,14 +279,15 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	margin: 10px 10px 10px;
-	border: 7px solid #F4F3EA;
 	border-radius: 20%;
-	background-color: #E5E5E5;
+	border: 1px solid;
+	background-color: white;
 	justify-content: center;
 	align-items: center;
 }
 .club_box:hover{
-	background-color: #FFFFFF;
+	background-color: #E5E5E5;
+	color: white;
 	border: none;
 }
 
